# dosbox-express

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  .taurignore  LICENSE.txt  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  vite.config.ts
.github/workflows/: build-for-windows.yml  release.yml
scripts/: rename-windows-exe.cjs
src/: app.tsx  main.scss  main.tsx  style.css  subscription.ts  subscriptions.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2022-11-19-092156_create_games/: down.sql  up.sql
src-tauri/migrations/2023-01-26-192134_create_settings/: up.sql
src-tauri/migrations/2024-06-09-112008_add_game_addons/: down.sql  up.sql
src-tauri/src/: main.rs  models.rs  schema.rs
src-tauri/src/common/: db.rs  error.rs  exec.rs  file.rs  macros.rs  mod.rs  path.rs  result.rs  structs.rs  types.rs
src-tauri/themes/: heroic-sample.css
src/app/: AddGame.tsx  App.tsx  Main.tsx  SettingsProvider.tsx  Styles.tsx
src/common/: Config.test.ts  Config.ts  Subscription.ts  api.ts  attempt.ts  constants.ts  getLabel.ts  parseConfig.ts  pass.ts  path.ts  secondsToHours.ts  stringifyConfig.test.ts  stringifyConfig.ts  theme.ts  yup.ts
src/components/: Button.tsx  Checkbox.tsx  DataTable.tsx  Dialog.tsx  Divider.tsx  Error.tsx  ErrorMessage.tsx  InlineButton.tsx  Input.tsx  Inset.tsx  Link.tsx  List.tsx  Outset.tsx  OutsetHead.tsx  Select.tsx  TextArea.tsx
src/fetchers/: fetchBaseConfig.ts  fetchDefaultConfig.ts  fetchGameConfig.ts
(+48 files in other folders)
