[package]
name = "dosbox-express"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.8", features = ["dialog-confirm", "dialog-message", "dialog-open", "os-all", "path-all", "process-exit", "shell-all"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
diesel = { version = "2.1.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
dunce = "1.0.3"
pathdiff = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
